plang/testing/logs/false-incorrect/22/program22.p.p
q6.
jyx.
s P (nPD2z (lDp Xl3U9)) (iqw Dt Psm (McAa)) :- iM9 mCB q.
aPU j3bm (fg1U (z IX7N (t7e Te8 j QLN (k (AU) qXd (DA7B)))) wCB1R (RgaeR) kj) (L) iZJgz.

xFuD (P5HGA) H7YT :- ((tUw tqGts ct (L) (ach0j (IvW)); gik O, (a kHYx th), (lVR3i), uFoI (bSY aI2 drZuc (xVm Nzw (PA8N))) (HC) (f fx (PN)) (Ygn); lV3h1 (lDlt qWp8r ex fP s))).
oFP (SCPkR).

c6Og Cf E :- tR (h9Sw (rX8 (LO))) (k (v) (g) (kHVU)) (YB).


eq zlq jcK87 (FdVy) ARIBg.


nvA (DyW8) (QCxHT) E5y :- (vZ Bwrge ABJ (bHW (HVxm)), bAA6; kQd, (bqMzF (p6tKX DXC) Xzz), h k (S8ul) (hN (rhMr (gP (Gj) (N1U) gsig4 SgW)) HCk) p; w9MzB thq); (((huN))); (c6W (p (Vcsb) k4n)); (yp9W1 (CdJ8) (n9 k (S6) (S) (hrA (oBR (Fn) iXvyy slJ) Ro (P) (W))) TEgp (ddgJo)), tU Qe37 E FGBOx MFS3U; u4Rq hjRwB (W) (Vyu1) (Io6p).
g8qb :- jY2pq (pbx (cgL (bm wt) (k irYf) (f1Tk) (ea (M) pVh0 z1))) EWOPy (RAJ) (z (L6Fpp)), (((ou5A StL62)), (wa; gnCe V s)).
? pLuWR (X) Iqv (decpl hB2 KtI WagZY) (lPq2C f4f0F ccCQ); o ra (A); r EnfA (AC2YX) (q9v (M) A (FDh)) (DI); qY tMtb (EW3z1), d (aJvtP (U15l) Z (o jRt7 (UDrH))) (AllEe); bXD8g (FiLvp), zFC, h Znm; lA7X4 IRkp L (FjP); xagaL (w bjL SAPlp vCG69) (I2Dx) lsrL0; b.
